--- a/transition-activity/index.html
+++ b/transition-activity/index.html
@@ -17,7 +17,7 @@
         </div>
         <img src="./assets/benjamin-voros-phIFdC6lA4E-unsplash.jpg" alt="twilight mountains">
       </article>
-      <button type="button" name="button">I want to go to there!</button>
+      <button type="button" name="button" class="btn">I want to go to there!</button>
     </div>
     <a href="https://unsplash.com/photos/phIFdC6lA4E?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">Image credit</a>
     <!-- prevents odd chrome bug that causes transition to happen on page load -->
